@@ -3,6 +3,8 @@
 	* src/time.c (gstrptime): Beware of time in seconds specified as an
 	exponential; e.g. 123.456e7 seconds does not end in 456 usec.
 
+	* src/graph3d.c: Better fix for	Bug #1252, inverted parallel axis labels
+
 2013-07-02  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>
 
 	* src/command.c src/plot.c src/plot.h src/variable.c:
